--- a/automations.yaml
+++ b/automations.yaml
@@ -324,6 +324,9 @@
   - platform: homeassistant
     event: start
     id: restart
+  - platform: state
+    entity_id:
+    - input_boolean.irrigation_automation
   condition:
   - condition: state
     entity_id: input_boolean.irrigation_automation
@@ -658,8 +661,8 @@
     - binary_sensor.all_openings
     for:
       hours: 0
-      minutes: 1
-      seconds: 0
+      minutes: 0
+      seconds: 2
     to: 'on'
   - platform: state
     entity_id:
@@ -672,6 +675,9 @@
     from:
   - platform: homeassistant
     event: start
+  - platform: state
+    entity_id:
+    - input_boolean.automation_heat_home
   condition:
   - condition: state
     entity_id: input_boolean.automation_heat_home
@@ -728,6 +734,9 @@
     - input_boolean.heating_manual_boost
   - platform: time
     at: input_datetime.heating_manual_boost_end
+  - platform: state
+    entity_id:
+    - input_boolean.automation_heat_home
   condition:
   - condition: state
     entity_id: input_boolean.automation_heat_home
@@ -1269,98 +1278,6 @@
       icon: mdi:television-shimmer
       tag: '{{tag}}'
   mode: single
-- id: '1688555445627'
-  alias: Nettoyage Intelligent - Nettoyer quand maison vide
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - binary_sensor.home_occupied
-    from: 'on'
-    to: 'off'
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_clean_house
-    state: 'on'
-  - condition: state
-    entity_id: input_boolean.guest_mode
-    state: 'off'
-  action:
-  - if:
-    - condition: state
-      entity_id: input_boolean.house_cleaning_first_floor
-      state: 'on'
-    - condition: state
-      entity_id: binary_sensor.should_neuneu_run
-      state: 'on'
-    - condition: not
-      conditions:
-      - condition: state
-        entity_id: vacuum.neuneu
-        state: cleaning
-    then:
-    - service: vacuum.start
-      data: {}
-      target:
-        entity_id: vacuum.neuneu
-  mode: single
-- id: '1688555577151'
-  alias: Nettoyage Intelligent - RTH quand maison occupée
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - binary_sensor.home_occupied
-    from: 'off'
-    to: 'on'
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_clean_house
-    state: 'on'
-  action:
-  - if:
-    - condition: state
-      entity_id: vacuum.neuneu
-      state: cleaning
-    then:
-    - service: vacuum.return_to_base
-      data: {}
-      target:
-        entity_id: vacuum.neuneu
-  mode: single
-- id: '1688555745575'
-  alias: Nettoyage Intelligent - Démarrer NeuNeu quand rez-de-chaussée sale
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - binary_sensor.should_neuneu_run
-    from: 'off'
-    to: 'on'
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_clean_house
-    state: 'on'
-  - condition: state
-    entity_id: input_boolean.house_cleaning_first_floor
-    state: 'on'
-  - condition: state
-    entity_id: binary_sensor.home_occupied
-    state: 'off'
-  - condition: not
-    conditions:
-    - condition: state
-      entity_id: vacuum.neuneu
-      state: cleaning
-  - condition: state
-    entity_id: input_boolean.guest_mode
-    state: 'off'
-  action:
-  - service: vacuum.start
-    data: {}
-    target:
-      entity_id: vacuum.neuneu
-  mode: single
 - id: '1688556025376'
   alias: "Nettoyage Intelligent - \U0001F514 Notifier rez-de-chaussée très sale"
   description: ''
@@ -1492,25 +1409,6 @@
     data: {}
     target:
       entity_id: vacuum.neuneu
-  mode: single
-- id: '1688571869274'
-  alias: Nettoyage Intelligent - Réinitialiser Étage NeuNeu
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - vacuum.neuneu
-    to: docked
-  condition:
-  - condition: state
-    entity_id: select.neuneu_selected_map
-    state: 'Premier Étage '
-  action:
-  - service: select.select_option
-    data:
-      option: 'Rez-de-chaussée '
-    target:
-      entity_id: select.neuneu_selected_map
   mode: single
 - id: '1688927204517'
   alias: "Tesla - \U0001F514 Notifier réinitialisation de cible de charge "
@@ -2216,32 +2114,6 @@
         - entity_id: sensor.neuneu_error
           new_state: no_error
   mode: single
-- id: '1693508452789'
-  alias: 'Nettoyage Intelligent - Démarrage automatique de NeuNeu avec serpillière '
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - sensor.neuneu_water_tank
-    to: installed
-    for:
-      hours: 0
-      minutes: 10
-      seconds: 0
-    from: not_installed
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_clean_house
-    state: 'on'
-  - condition: state
-    entity_id: input_boolean.guest_mode
-    state: 'off'
-  action:
-  - service: vacuum.start
-    data: {}
-    target:
-      entity_id: vacuum.neuneu
-  mode: single
 - id: '1693509234441'
   alias: "Tesla - \U0001F514 Rappel charge "
   description: ''
@@ -2505,6 +2377,9 @@
   - platform: state
     entity_id:
     - input_boolean.heating_manual_boost
+  - platform: state
+    entity_id:
+    - input_boolean.automation_heat_home
   condition:
   - condition: state
     entity_id: input_boolean.automation_heat_home
@@ -2524,3 +2399,139 @@
     target:
       entity_id: input_datetime.heating_manual_boost_end
   mode: single
+- id: '1700265595004'
+  alias: Nettoyage Intelligent - Contrôler NeuNeu
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - input_boolean.automation_clean_house
+  - platform: state
+    entity_id:
+    - input_boolean.house_cleaning_first_floor
+  - platform: state
+    entity_id:
+    - vacuum.neuneu
+    from:
+    to:
+    id: vacuum_state_change
+  - platform: state
+    entity_id:
+    - binary_sensor.home_occupied
+    from:
+    to:
+  - platform: state
+    entity_id:
+    - binary_sensor.should_neuneu_run
+  - platform: state
+    entity_id:
+    - input_boolean.guest_mode
+  - platform: state
+    entity_id:
+    - sensor.neuneu_water_tank
+    to: installed
+    for:
+      hours: 0
+      minutes: 10
+      seconds: 0
+    from: not_installed
+    id: water_tank_installed_for_more_than_10_minutes
+  - platform: homeassistant
+    event: start
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_clean_house
+    state: 'on'
+  action:
+  - if:
+    - condition: trigger
+      id:
+      - vacuum_state_change
+    - condition: state
+      entity_id: vacuum.neuneu
+      state: cleaning
+    - condition: state
+      entity_id: binary_sensor.home_occupied
+      state: 'on'
+    then:
+    - service: input_boolean.turn_on
+      data: {}
+      target:
+        entity_id: input_boolean.neuneu_triggered_while_home_occupied
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - water_tank_installed_for_more_than_10_minutes
+      sequence:
+      - service: vacuum.start
+        data: {}
+        target:
+          entity_id: vacuum.neuneu
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.home_occupied
+        state: 'on'
+      - condition: state
+        entity_id: vacuum.neuneu
+        state: cleaning
+      - condition: state
+        entity_id: input_boolean.neuneu_triggered_while_home_occupied
+        state: 'off'
+      sequence:
+      - service: vacuum.return_to_base
+        data: {}
+        target:
+          entity_id: vacuum.neuneu
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.home_occupied
+        state: 'off'
+      - condition: state
+        entity_id: binary_sensor.should_neuneu_run
+        state: 'on'
+      - condition: state
+        entity_id: vacuum.neuneu
+        state: docked
+      - condition: state
+        entity_id: input_boolean.house_cleaning_first_floor
+        state: 'on'
+      - condition: state
+        entity_id: input_boolean.guest_mode
+        state: 'off'
+      sequence:
+      - service: vacuum.start
+        data: {}
+        target:
+          entity_id: vacuum.neuneu
+  - if:
+    - condition: state
+      entity_id: vacuum.neuneu
+      state: docked
+    - condition: not
+      conditions:
+      - condition: state
+        entity_id: select.neuneu_selected_map
+        state: 'Rez-de-chaussée '
+    then:
+    - service: select.select_option
+      data:
+        option: Rez-De-Chaussée
+      target:
+        entity_id: select.neuneu_selected_map
+  - if:
+    - condition: or
+      conditions:
+      - condition: state
+        entity_id: binary_sensor.home_occupied
+        state: 'off'
+      - condition: state
+        entity_id: vacuum.neuneu
+        state: docked
+    then:
+    - service: input_boolean.turn_off
+      data: {}
+      target:
+        entity_id: input_boolean.neuneu_triggered_while_home_occupied
+  mode: queued
+  max: 10
