English sentence to play media in area

--- a/custom_sentences/en/play_media_on_mass_en.yaml
+++ b/custom_sentences/en/play_media_on_mass_en.yaml
@@ -4,6 +4,10 @@ intents:
     data:
       - sentences:
           - (Play|Listen) {query}
+  PlayWhateverOnAreaEn:
+    data:
+      - sentences:
+          - (Play|Listen) {query} [in] <area>
 
 lists:
   query:
