--- a/automations.yaml
+++ b/automations.yaml
@@ -661,8 +661,8 @@
     - binary_sensor.all_openings
     for:
       hours: 0
-      minutes: 0
-      seconds: 2
+      minutes: 2
+      seconds: 0
     to: 'on'
   - platform: state
     entity_id:
@@ -1772,192 +1772,6 @@
     target:
       entity_id: input_boolean.automation_matrix_2d
   mode: single
-- id: '1691565244384'
-  alias: Simulation de présence - Simuler Réveil
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.presence_simulator_wakeup_hour
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_presence_simulator
-    state: 'on'
-  action:
-  - delay:
-      hours: 0
-      minutes: '{{ (range(1, 30)|random|int) }}'
-      seconds: 0
-      milliseconds: 0
-  - service: hue.activate_scene
-    data: {}
-    target:
-      entity_id:
-      - scene.bureau_bureau_100
-      - scene.chambre_bebe_chambre_bebe_100
-      - scene.chambre_chambre_100
-  mode: single
-- id: '1691565349298'
-  alias: Simulation de présence - Simuler Déjeuner
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.presence_simulator_breakfast_hour
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_presence_simulator
-    state: 'on'
-  action:
-  - delay:
-      hours: 0
-      minutes: '{{ (range(1, 30)|random|int) }}'
-      seconds: 0
-      milliseconds: 0
-  - service: light.turn_off
-    data: {}
-    target:
-      entity_id:
-      - light.chambre
-      - light.bureau
-      - light.chambre_bebe
-  - service: hue.activate_scene
-    data: {}
-    target:
-      entity_id:
-      - scene.salon_salon_100
-      - scene.entree_entree_100
-      - scene.cuisine_cuisine_100
-  - if:
-    - condition: state
-      entity_id: input_boolean.presence_simulator_control_cover
-      state: 'on'
-    then:
-    - service: cover.open_cover
-      data: {}
-      target:
-        entity_id: cover.living_room_cover
-  mode: single
-- id: '1691565411821'
-  alias: Simulation de présence - Simuler Départ
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.presence_simulator_leave_hour
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_presence_simulator
-    state: 'on'
-  action:
-  - delay:
-      hours: 0
-      minutes: '{{ (range(1, 30)|random|int) }}'
-      seconds: 0
-      milliseconds: 0
-  - service: script.leave_home
-    data: {}
-  - if:
-    - condition: state
-      entity_id: input_boolean.presence_simulator_control_cover
-      state: 'on'
-    then:
-    - service: cover.close_cover
-      data: {}
-      target:
-        entity_id: cover.living_room_cover
-  mode: single
-- id: '1691565528048'
-  alias: Simulation de présence - Simuler Retour
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.presence_simulator_return_hour
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_presence_simulator
-    state: 'on'
-  action:
-  - delay:
-      hours: 0
-      minutes: '{{ (range(1, 30)|random|int) }}'
-      seconds: 0
-      milliseconds: 0
-  - service: hue.activate_scene
-    data: {}
-    target:
-      entity_id:
-      - scene.exterieur_exterieur_100
-      - scene.salon_salon_100
-      - scene.cuisine_cuisine_100
-      - scene.entree_entree_100
-  - if:
-    - condition: state
-      entity_id: input_boolean.presence_simulator_control_cover
-      state: 'on'
-    then:
-    - service: cover.open_cover
-      data: {}
-      target:
-        entity_id: cover.living_room_cover
-  mode: single
-- id: '1691565593850'
-  alias: Simulation de présence - Simuler Lit
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.presence_simulator_bedtime_hour
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_presence_simulator
-    state: 'on'
-  action:
-  - delay:
-      hours: 0
-      minutes: '{{ (range(1, 30)|random|int) }}'
-      seconds: 0
-      milliseconds: 0
-  - service: light.turn_off
-    data: {}
-    target:
-      entity_id:
-      - light.exterieur
-      - light.lumieres_rez_de_chaussee
-  - service: hue.activate_scene
-    data: {}
-    target:
-      entity_id:
-      - scene.chambre_chambre_100
-      - scene.bureau_bureau_100
-      - scene.chambre_bebe_chambre_bebe_100
-  - if:
-    - condition: state
-      entity_id: input_boolean.presence_simulator_control_cover
-      state: 'on'
-    then:
-    - service: cover.close_cover
-      data: {}
-      target:
-        entity_id: cover.living_room_cover
-  mode: single
-- id: '1691565757204'
-  alias: Simulation de présence - Simuler Coucher
-  description: ''
-  trigger:
-  - platform: time
-    at: input_datetime.presence_simulator_sleep_hour
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_presence_simulator
-    state: 'on'
-  action:
-  - delay:
-      hours: 0
-      minutes: '{{ (range(1, 30)|random|int) }}'
-      seconds: 0
-      milliseconds: 0
-  - service: light.turn_off
-    data: {}
-    target:
-      entity_id: light.all_lights
-  mode: single
 - id: '1691566363432'
   alias: "Simulation de présence - \U0001F6CE️ Notifier Éloignement domicile sans
     simulation de présence"
@@ -2535,3 +2349,194 @@
         entity_id: input_boolean.neuneu_triggered_while_home_occupied
   mode: queued
   max: 10
+- id: '1700410464307'
+  alias: Simulation de présence
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - sensor.presence_simulator_current_step
+  - platform: state
+    entity_id:
+    - input_boolean.automation_presence_simulator
+  - platform: state
+    entity_id:
+    - input_boolean.presence_simulator_control_cover
+  - platform: state
+    entity_id:
+    - binary_sensor.home_occupied
+  - platform: homeassistant
+    event: start
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_presence_simulator
+    state: 'on'
+  - condition: state
+    entity_id: binary_sensor.home_occupied
+    state: 'off'
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: sensor.presence_simulator_current_step
+        state: out
+      sequence:
+      - service: light.turn_off
+        target:
+          entity_id:
+          - light.all_lights
+        data: {}
+      - if:
+        - condition: state
+          entity_id: input_boolean.presence_simulator_control_cover
+          state: 'on'
+        then:
+        - service: cover.close_cover
+          data: {}
+          target:
+            entity_id: cover.living_room_cover
+    - conditions:
+      - condition: state
+        entity_id: sensor.presence_simulator_current_step
+        state: wake_up
+      sequence:
+      - service: light.turn_off
+        data: {}
+        target:
+          entity_id:
+          - light.lumieres_rez_de_chaussee
+          - light.couloir
+          - light.exterieur
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          entity_id:
+          - light.chambre
+          - light.chambre_bebe
+          - light.bureau
+      - if:
+        - condition: state
+          entity_id: input_boolean.presence_simulator_control_cover
+          state: 'on'
+        then:
+        - service: cover.close_cover
+          data: {}
+          target:
+            entity_id: cover.living_room_cover
+    - conditions:
+      - condition: state
+        entity_id: sensor.presence_simulator_current_step
+        state: breakfast
+      sequence:
+      - service: light.turn_off
+        data: {}
+        target:
+          entity_id:
+          - light.chambre
+          - light.chambre_bebe
+          - light.bureau
+          - light.couloir
+          - light.exterieur
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          entity_id: light.lumieres_rez_de_chaussee
+      - if:
+        - condition: state
+          entity_id: input_boolean.presence_simulator_control_cover
+          state: 'on'
+        then:
+        - service: cover.open_cover
+          data: {}
+          target:
+            entity_id: cover.living_room_cover
+    - conditions:
+      - condition: state
+        entity_id: sensor.presence_simulator_current_step
+        state: chill
+      sequence:
+      - service: light.turn_off
+        data: {}
+        target:
+          entity_id:
+          - light.chambre
+          - light.chambre_bebe
+          - light.bureau
+          - light.couloir
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          entity_id:
+          - light.lumieres_rez_de_chaussee
+          - light.exterieur
+      - if:
+        - condition: state
+          entity_id: input_boolean.presence_simulator_control_cover
+          state: 'on'
+        then:
+        - service: cover.open_cover
+          data: {}
+          target:
+            entity_id: cover.living_room_cover
+    - conditions:
+      - condition: state
+        entity_id: sensor.presence_simulator_current_step
+        state: eating
+      sequence:
+      - service: light.turn_off
+        data: {}
+        target:
+          entity_id:
+          - light.chambre
+          - light.chambre_bebe
+          - light.bureau
+          - light.couloir
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          entity_id:
+          - light.lumieres_rez_de_chaussee
+          - light.exterieur
+      - if:
+        - condition: state
+          entity_id: input_boolean.presence_simulator_control_cover
+          state: 'on'
+        then:
+        - service: cover.open_cover
+          data: {}
+          target:
+            entity_id: cover.living_room_cover
+    - conditions:
+      - condition: state
+        entity_id: sensor.presence_simulator_current_step
+        state: bedtime
+      sequence:
+      - service: light.turn_off
+        data: {}
+        target:
+          entity_id:
+          - light.lumieres_rez_de_chaussee
+          - light.couloir
+          - light.exterieur
+      - service: light.turn_on
+        data:
+          brightness_pct: 100
+        target:
+          entity_id:
+          - light.chambre
+          - light.chambre_bebe
+          - light.bureau
+      - if:
+        - condition: state
+          entity_id: input_boolean.presence_simulator_control_cover
+          state: 'on'
+        then:
+        - service: cover.open_cover
+          data: {}
+          target:
+            entity_id: cover.living_room_cover
+  mode: single
