--- a/packages/media_center/switch_media_center.yaml
+++ b/packages/media_center/switch_media_center.yaml
@@ -4,7 +4,7 @@ switch:
     switches:
       media_center:
         unique_id: media_center
-        value_template: "{{ is_state('binary_sensor.is_tv_on' , 'on')}}"
+        value_template: "{{ is_state('remote.jl_s_tv', 'on') }}"
         turn_on:
           service: script.turn_on_media_center
           data: {}
