--- a/scripts.yaml
+++ b/scripts.yaml
@@ -112,31 +112,42 @@ turn_on_media_center:
 pulse_2d_led_matrix:
   alias: Pulse - Allumer
   sequence:
-  - condition: state
-    entity_id: input_boolean.guest_mode
-    state: 'off'
-  - if:
-    - condition: state
-      entity_id: light.2d_matrix
-      state: 'off'
-    then:
-    - service: light.turn_on
+  - choose:
+    - conditions:
+      - condition: time
+        after: input_datetime.pulse_start_schedule
+        before: input_datetime.pulse_end_schedule
+      - condition: state
+        entity_id: input_boolean.guest_mode
+        state: 'off'
+      sequence:
+      - if:
+        - condition: state
+          entity_id: light.2d_matrix
+          state: 'off'
+        then:
+        - service: light.turn_on
+          data: {}
+          target:
+            entity_id:
+            - light.2d_matrix
+        - service: input_datetime.set_datetime
+          data:
+            datetime: '{{ now() + timedelta( seconds = 3 ) }}'
+          target:
+            entity_id: input_datetime.pulse_end_time
+        else:
+        - service: input_datetime.set_datetime
+          data:
+            datetime: '{{as_datetime(states(''input_datetime.pulse_end_time'')) +   timedelta(
+              seconds = 3 )}}'
+          target:
+            entity_id: input_datetime.pulse_end_time
+    default:
+    - service: light.turn_off
+      target:
+        entity_id: light.2d_matrix
       data: {}
-      target:
-        entity_id:
-        - light.2d_matrix
-    - service: input_datetime.set_datetime
-      data:
-        datetime: '{{ now() + timedelta( seconds = 3 ) }}'
-      target:
-        entity_id: input_datetime.pulse_end_time
-    else:
-    - service: input_datetime.set_datetime
-      data:
-        datetime: '{{as_datetime(states(''input_datetime.pulse_end_time'')) +   timedelta(
-          seconds = 3 )}}'
-      target:
-        entity_id: input_datetime.pulse_end_time
   mode: queued
   icon: mdi:crop-square
   max: 1000
