Store battery types as attributes

--- a/packages/battery/ignored_batteries.yaml
+++ b/packages/battery/ignored_batteries.yaml
@@ -10,3 +10,5 @@ homeassistant:
       ignore_battery: true
     sensor.neuneu_battery_level:
       ignore_battery: true
+    sensor.tesla_battery_level:
+      ignore_battery: true
