Target area with voice assistant for mass intent

--- a/custom_sentences/en/play_media_on_mass_en.yaml
+++ b/custom_sentences/en/play_media_on_mass_en.yaml
@@ -4,6 +4,9 @@ intents:
     data:
       - sentences:
           - (Play|Listen) {query}
+        requires_context:
+          area:
+            slot: true
   PlayWhateverOnAreaEn:
     data:
       - sentences:
