--- a/automations.yaml
+++ b/automations.yaml
@@ -2634,3 +2634,91 @@
       - input_boolean.poubelle_noire_a_sortir
     data: {}
   mode: single
+- id: '1703176659308'
+  alias: Bureau - Standing Desk Autonome
+  description: ''
+  trigger:
+  - platform: time_pattern
+    minutes: '25'
+  - platform: time_pattern
+    minutes: '55'
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_meetings
+    state: 'on'
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: person.jenova70
+        state: home
+      - condition: state
+        entity_id: device_tracker.jean_loics_laptop
+        state: home
+      - condition: state
+        entity_id: binary_sensor.capteur_presence_bureau_occupancy
+        state: 'on'
+      - condition: state
+        entity_id: binary_sensor.quest_in_use
+        state: 'off'
+      - condition: state
+        entity_id: binary_sensor.jean_loics_laptop_camera_in_use
+        state: 'off'
+      - condition: state
+        entity_id: binary_sensor.workday_today
+        state: 'on'
+      - condition: time
+        before: '18:00:00'
+        after: 08:00:00
+      - condition: numeric_state
+        entity_id: sensor.next_meeting_in
+        above: 2100
+      - condition: template
+        value_template: '{{ range(1, 4) | random == 1 }}'
+      sequence:
+      - service: button.press
+        target:
+          entity_id:
+          - button.standing_desk_move_desk_to_position_1
+        data: {}
+    default:
+    - service: button.press
+      target:
+        entity_id: button.standing_desk_move_desk_to_position_2
+      data: {}
+  mode: single
+- id: '1703178925143'
+  alias: 'Box Chambre - Réduire Luminosité '
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - light.chambre
+  - platform: state
+    entity_id:
+    - light.casita_chambre_lcd_backlight
+    attribute: brightness
+  - platform: homeassistant
+    event: start
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: light.chambre
+        state: 'on'
+      sequence:
+      - service: light.turn_on
+        target:
+          entity_id:
+          - light.casita_chambre_lcd_backlight
+        data:
+          brightness_pct: 100
+    default:
+    - service: light.turn_on
+      target:
+        entity_id:
+        - light.casita_chambre_lcd_backlight
+      data:
+        brightness_pct: 20
+  mode: single
