--- a/packages/battery/ignored_batteries.yaml
+++ b/packages/battery/ignored_batteries.yaml
@@ -12,3 +12,5 @@ homeassistant:
       ignore_battery: true
     sensor.tesla_battery_level:
       ignore_battery: true
+    sensor.ipad_battery_level:
+      ignore_battery: true
